# intersection

./: CMakeLists.txt  exampl.txt
2,3-tree/: 2,3-tree.cpp  2,3-tree.h  CMakeLists.txt
AVL construction/: AVL_tree.h  CMakeLists.txt
AVL-tree/: AVL_tree.cpp  AVL_tree.h  CMakeLists.txt
Algorithm/: Algorithm.h  CMakeLists.txt  Generator.h  line.h
ITest/: CMakeLists.txt  test_23.cpp  test_AVL.cpp  test_intersection.cpp
Intersection/: CMakeLists.txt  Main.cpp
Intersection comparison/: Algorithm.h  CMakeLists.txt  Main.cpp  line.h
gtest/: CMakeLists.txt
